1. Метод .of [#434720]